--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,11 +4,11 @@
 
 @layer components {
     .option_navbar {
-        @apply relative px-8 py-4 md:px-10 md:py-5 text-2xl md:text-3xl text-[#2f2e2e] hover:text-bright-blue border-b-[3px] md:border-b-0 md:border-l-[3px] border-white dark:border-second-black hover:border-bright-blue dark:hover:border-bright-blue cursor-pointer z-10 transition;
+        @apply relative px-8 py-4 md:px-10 md:py-5 text-2xl md:text-3xl text-[#2f2e2e] dark:text-dark-mode-gray hover:text-bright-blue dark:hover:hover:text-bright-blue border-b-[3px] md:border-b-0 md:border-l-[3px] border-white dark:border-dark-mode-black hover:border-bright-blue dark:hover:border-bright-blue cursor-pointer z-10 transition;
     }
 
     .option-active_navbar {
-        @apply text-bright-blue bg-gradient-to-t md:bg-gradient-to-r from-bright-blue/30 border-b-[3px] md:border-b-0 md:border-l-[3px] border-bright-blue dark:border-bright-blue;
+        @apply text-bright-blue dark:text-bright-blue bg-gradient-to-t md:bg-gradient-to-r from-bright-blue/30 border-b-[3px] md:border-b-0 md:border-l-[3px] border-bright-blue dark:border-bright-blue;
     }
 
     .option-bg-gradient_navbar {
@@ -16,7 +16,7 @@
     }
 
     .input_search {
-        @apply w-full mt-4 p-2 text-black dark:text-white bg-white dark:bg-second-black border border-gray-300 rounded transition;
+        @apply w-full mt-4 p-2 text-black dark:text-white bg-white dark:bg-dark-mode-black border border-gray-300 rounded transition;
     }
 
     .btn-category_search {
@@ -24,11 +24,11 @@
     }
 
     .place-card_search {
-        @apply grid w-80 mr-4 mb-3 bg-white dark:bg-second-black hover:bg-gray-100 dark:hover:bg-second-gray border border-gray-200 dark:border-gray-800 rounded-lg shadow transition;
+        @apply grid w-80 mr-4 mb-3 bg-white dark:bg-dark-mode-black hover:bg-gray-100 dark:hover:bg-dark-mode-gray-2 border border-gray-200 dark:border-gray-800 rounded-lg shadow transition;
     }
 
     .date-box_place-card {
-        @apply flex justify-center items-center w-12 h-12 text-white bg-bright-blue hover:bg-blue-700 rounded cursor-pointer;
+        @apply flex justify-center items-center w-12 h-12 text-white bg-bright-blue hover:bg-blue-700 rounded transition cursor-pointer;
     }
 
     .icon-paragraph_place-card {
@@ -44,7 +44,7 @@
     }
 
     .place-card_trip {
-        @apply grid w-80 mr-4 mb-3 bg-white dark:bg-second-black hover:bg-gray-100 dark:hover:bg-second-gray border border-gray-200 dark:border-gray-800 rounded-lg shadow transition;
+        @apply grid w-80 mr-4 mb-3 bg-white dark:bg-dark-mode-black hover:bg-gray-100 dark:hover:bg-dark-mode-gray-2 border border-gray-200 dark:border-gray-800 rounded-lg shadow transition;
     }
 
     .msg-info_trip {
