--- a/src/style/leaflet/leaflet-routing-machine.scss
+++ b/src/style/leaflet/leaflet-routing-machine.scss
@@ -100,11 +100,11 @@
 
 .dark .leaflet-routing-alt {
     tr:hover {
-        background-color: #090808;
+        background-color: #09090b;
     }
 
     &::-webkit-scrollbar-track {
-        background-color: #090808;
+        background-color: #09090b;
     }
 
     &::-webkit-scrollbar-thumb {
